# C_Compression_Algorithms

./: .gitignore  CMakeLists.txt  compress-huffman.c  compress-lzw.c  compress-rle.c  decompress-huffman.c  decompress-lzw.c  decompress-rle.c  design.vsdx  huffman_lib.c  huffman_lib.h  lzw_lib.c  lzw_lib.h  rle_lib.c  rle_lib.h
